Fix link for OUTSW (data)

--- a/dos33.html
+++ b/dos33.html
@@ -1329,7 +1329,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     206             SEC             ;(FOR 'ESC' SCREEN FUNCTIONS)
                     207             RTS             ; BY PASS PRINT
                     208 ;
-                    209 <a class='f' name='ORTN1'    >ORTN1       </a>JMP (<a class='x' href='#OUTSW'>OUTSW</a>)
+                    209 <a class='f' name='ORTN1'    >ORTN1       </a>JMP (<a class='v' href='#OUTSW'>OUTSW</a>)
                     210 ;
                     211 ; PRRIF - PRINT CR IF MON CMDS
                     212 ;
