--- a/dos33.html
+++ b/dos33.html
@@ -1348,14 +1348,14 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     007             LDX #0          ;Init X for lower case check    
                     008             JSR UPRCASE     ;Go check                       </span>
                     009     ELSE
-1FCD:A0 FF          010             LDY #$FF        ;Set CMDNO to -1                
+1FCD:A0 FF          010             LDY #$<span class='n'>FF</span>        ;Set CMDNO to -1                
 1FCF:8C 5F 2A       011             STY CMDNO                                       
                     012     FIN
 1FD2:C8             013             INY             ; INCR TABLE INDEX
 1FD3:8C 62 2A       014             STY SVCMD
                     015 SC0         EQU *
 1FD6:EE 5F 2A       016             INC CMDNO       ; INCR CMD NO                   ; Thanks Captain Obvious
-1FD9:A2 00          017             LDX #0          ; RESET LINE INDEX TO 0
+1FD9:A2 00          017             LDX #<span class='n'>0</span>          ; RESET LINE INDEX TO 0
 1FDB:08             018             PHP             ; SAVE EQ STATUS
 1FDC:BD 00 02       019             LDA LBUFF,X     ; GET 1ST LINE  CHAR
 1FDF:CD B2 2A       020             CMP CCHAR       ; IS IT CONTROL D
@@ -1365,7 +1365,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     024 ;
                     025 SC1X        EQU *
                     026             JSR GNBC        ; GET NON BLANK INPUT CHAR
-                    027             AND #$7F        ; MSB OF CHAR OFF
+                    027             AND #$<span class='n'>7F</span>        ; MSB OF CHAR OFF
                     028             EOR CMDNTB,Y    ; EOR WITH INPUT
                     029             INY             ; INCREMENT TABLE INDEX
                     030             ASL A           ; IF MSB OF EOR RESULT ON
@@ -1385,8 +1385,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     044             BEQ CNF1        ; POSSIBLE SYNTAX ERROR, ELSE 
                     045             JMP PRRTN       ; ITS A BASIC INPUT LINE
                     046 CNF1        EQU *
-                    047             LDA LBUFF+1     ; GET NEXT CHAR
-                    048             CMP #$8D        ; IS IT A CR
+                    047             LDA LBUFF+<span class='n'>1</span>     ; GET NEXT CHAR
+                    048             CMP #$<span class='n'>8D</span>        ; IS IT A CR                    ; <a class='magic' name='_'>magic number</a> CR_HI
                     049             BNE CSERR       ; BR IF CR
                     050             JSR CLRSTS      ; CLEAR THE STATES
                     051             JMP CMDRTN      ; CNTL-D ONLY
@@ -1404,9 +1404,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     063             LDA #RNONLY
                     064             AND CMDSTB,Y
                     065             BEQ SYN1
-                    066             LDA #$F
+                    066             LDA #$<span class='n'>F</span>                                         ; <a class='magic' name='_'>magic number</a> ERR_NOT_DIRECT
                     067             JMP ERROR
-                    068 SYN1        CPY #6
+                    068 SYN1        CPY #<span class='n'>6</span>                                          ; <a class='magic' name='_'>magic number</a> <span class='todo'>TODO</span> CMD_RUN
                     069             BNE SYN1A
                     070             STY PROMPT      ; CHANGE PROMPT TO INSURE APPLESOFT RUN DETECT.
                     071 SYN1A       LDA #FN1
@@ -1428,7 +1428,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     087             BEQ SN6         ; BR IF COMMA OR CR
                     088 SN4         STA FNAME1,Y    ; PUT INTO FILENAME
                     089             INY             ; INC FN INDEX                  ; Total filenames length &lt; 60 ?
-                    090             CPY #60         ; ATFN CHAR LIMIT               ; At Filename Character Limit <span class='todo'>TODO</span> What triggers this?
+                    090             CPY #<span class='n'>60</span>         ; ATFN CHAR LIMIT               ; At Filename Character Limit <span class='todo'>TODO</span> What triggers this?
                     091             BCC SN3         ; BR IF NOT
                     092 SN5         JSR GNXTC       ; LOOP UNTIL CR OR COMMA
                     093             BNE SN5
@@ -1441,16 +1441,16 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     100             AND CMDSTB,Y    ; IF FN2 NOT REQD THEN
                     101             BEQ SN8         ; BRANCH
                     102 ;
-                    103             LDY #30         ; SET FN2 INDEX                 ; @filename2[0]
+                    103             LDY #<span class='n'>30</span>         ; SET FN2 INDEX                 ; @filename2[0] <a class='magic' name='_'>magic number</a> MAX_FILENAME_LEN
                     104             PHP             ; INDICATE FN2 SEEK
                     105             BNE SN2         ; GO LOOK FOR FN2
                     106 ;
                     107 SN7         LDA FNAME2      ; IF 1ST CHAR OF
-                    108             CMP #$A0        ; FN2 IS BLANK THEN
+                    108             CMP #$<span class='n'>A0</span>        ; FN2 IS BLANK THEN
                     109             BEQ SERR1       ; SYNTAX ERROR
                     110 ;
                     111 SN8         LDA FNAME1      ; IF 1ST CHAR OF
-                    112             CMP #$A0        ; FN1 IS NOT BLANK
+                    112             CMP #$<span class='n'>A0</span>        ; FN1 IS NOT BLANK
                     113             BNE SOPTS       ; THEN GO LOOK FOR OPTIONS
                     114 ;
                     115             LDY CMDNO
@@ -1463,9 +1463,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     122 SERR1       JMP CNF
                     123 ;
                     124 CLRFNS      EQU *
-                    125             LDY #60                                         ; <a class='magic' name='_'>magic number</a> MAX_FILENAME_LEN * 2
+                    125             LDY #<span class='n'>60</span>                                         ; <a class='magic' name='_'>magic number</a> MAX_FILENAME_LEN * 2
                     126 CLRFNA      EQU *
-                    127             LDA #$A0
+                    127             LDA #$<span class='n'>A0</span>
                     128 SN1         STA <a class='v' href='#FNAME1'>FNAME1</a>-<span class='n'>1</span>,Y  ; CLEAR FN1, FN2                ; *sigh* instead of -1 offset, LDY #MAX_FILENAME_LEN-1
                     129             DEY
                     130             BNE SN1
@@ -1483,7 +1483,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     142             TAY             ; IF HIGH DIGIT NOT
                     143             BNE SERR3       ; ZERO THEN BAD
                     144 ;
-                    145             CPX #17         ; IF LOW DIGIT GT 16
+                    145             CPX #<span class='n'>17</span>         ; IF LOW DIGIT GT 16
                     146             BCS SERR3       ; THEN BAD
                     147 ;
                     148             LDY CMDNO
@@ -1491,7 +1491,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     150             AND CMDSTB,Y    ; IF WE WANT NUM2
                     151             BEQ SN11
                     152 ;
-                    153             CPX #8          ; IF NUM2&gt;1
+                    153             CPX #<span class='n'>8 </span>         ; IF NUM2&gt;1
                     154             BCS SERR1       ; THEN ERROR, ELSE
                     155             BCC SOPTS       ; GO SCAN OPTIONS
                     156 ;
