--- a/dos33.html
+++ b/dos33.html
@@ -1104,21 +1104,21 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1E87:F0 15          008             BEQ CHIN1       ; THEN BRANCH, ELSE
 1E89:48             009             PHA             ;SAVE ISTATE
 1E8A:AD 5C 2A       010             LDA SVA
-1E8D:91 28          011             STA ($<span class='n'>28</span>),Y     ;REPLACE CURSOR                 ; *<b class="magic">magic number</b>* /sarcasm If only F800.S ROM defined BASL EQU $28
+1E8D:91 28          011             STA ($<span class='n'>28</span>),Y     ;REPLACE CURSOR                 ; <a class='magic' name='_1E8D'>magic number</a> /sarcasm If only F800.S ROM defined BASL EQU $28
 1E8F:68             012             PLA             ;GET ISTATE AGAIN
 1E90:30 03          013             BMI CHIN0       ;BRANCH IF NOT 'READ' FROM DISK
 1E92:4C 26 26       014             JMP ICFD        ; AND GET CHAR FROM DISK
 1E95:20 EA 1D       015 CHIN0       JSR INITC
-1E98:A4 24          016             LDY $<span class='n'>24</span>         ;GET CURSOR HORIZ               ; *<b class="magic">magic number</b>* /sarcasm If only F800.S ROM defined CH EQU $24
+1E98:A4 24          016             LDY $<span class='n'>24</span>         ;GET CURSOR HORIZ               ; <a class='magic' name='_1E98'>magic number</a> /sarcasm If only F800.S ROM defined CH EQU $24
 1E9A:A9 60          017             LDA #$<span class='n'>60</span>        ;RESTORE A FLASHING CURSOR      ; #' ' + FLASH ; INVERSE = $00..$3F, FLASH = $40..$7F, NORMAL = $80..FF
-1E9C:91 28          018             STA ($<span class='n'>28</span>),Y     ; TO PROMPT USER                ; *<b class="magic">magic number</b>*
+1E9C:91 28          018             STA ($<span class='n'>28</span>),Y     ; TO PROMPT USER                ; <a class='magic' name='_1E9C'>magic number</a>
                     019 CHIN1       EQU *
 1E9E:AD B3 2A       020             LDA ESTATE
 1EA1:F0 03          021             BEQ CHIN2
 1EA3:20 82 26       022             JSR NXTEXC      ;RETURNS TO HERE ONLY WHEN 'EXEC' IS EXHAUSTED
 
                     023 CHIN2       EQU *
-1EA6:A9 03          024             LDA #<span class='n'>3</span>          ; SET OUT CHAR                   ; <b class="magic">magic number</b> COS_INPUT_ECHO = 3
+1EA6:A9 03          024             LDA #<span class='n'>3</span>          ; SET OUT CHAR                   ; <a class='magic' name='_1EA6'>magic number</a> COS_INPUT_ECHO = 3
 1EA8:8D 52 2A       025             STA OSTATE      ; STATE TO INPUT ECHO
                     026             JSR LDREGS
                     027             JSR GETIN
@@ -2145,10 +2145,10 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     263 
                     264 
                     265 
-2506:20 65 0E       266 <a class="f" name="ASRUN2"  >ASRUN2      </a>JSR $<span class='n'>E65</span>        ; RAM                           ; *<b class="magic">magic number</b>* <a class="d" href="#AS2VT">AS2VT</a> has pointer to us
+2506:20 65 0E       266 <a class="f" name="ASRUN2"  >ASRUN2      </a>JSR $<span class='n'>E65</span>        ; RAM                           ; <a class='magic' name='_2506'>magic number</a> <a class="d" href="#AS2VT">AS2VT</a> has pointer to us
 2509:85 33          267             STA <a class="d" href="#PROMPT">PROMPT</a>      ;INSURES APPLESOFT RUN DETECT (A=0) ; (dead code) <a class='mem' name='_2506'>wastes</a> 10 bytes on Apple ][+ or later
 250B:85 D8          268             STA <a class="d" href="#ASONER">ASONER</a>      ;RESET APPLESOFT ONERR FLAG     ;
-250D:4C D4 0F       269             JMP $<span class='n'>FD4</span>                                        ; *<b class="magic">magic number</b>*
+250D:4C D4 0F       269             JMP $<span class='n'>FD4</span>                                        ; <a class='magic' name='_250D'>magic number</a>
 
 
 <hr><hr class='join'>=== <a class="file" name="XMISCMD">XMISCMD</a> - Execute misc. commands, Page <a class="page" name="page145">145</a>, <a class='ts' href='#T1S4'>T1S4</a> - <a class='ts' href='#T1S5'>T1S5</a>, $<span class='n'>A510</span> .. $<span class='n'>A6A7</span> ===<hr class='join'><hr>
@@ -3471,7 +3471,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     002 ;
                     003 * FLOCK - LOCK A FILE
                     004 ;
-2CEF:A9 80          005 <a class="f" name="FLOCK"      >FLOCK       </a>LDA #$<span class='n'>80</span>        ; REMEMBER LOCK                 ; *<a class="magic">magic number</a>* LOCK_MASK
+2CEF:A9 80          005 <a class="f" name="FLOCK"      >FLOCK       </a>LDA #$<span class='n'>80</span>        ; REMEMBER LOCK                 ; <a class='magic' name='_2CEF'>magic number</a> LOCK_MASK
 2CF1:8D 9E 33       006             STA <a class="v" href="#TEMP3">TEMP3</a>                                       ; <a class='mem' name='_2CF1'>wastes</a> 3 bytes, BNE line #<a class='line' href='#FDELCAT.012'>12</a>
 2CF4:D0 05          007             BNE <a class="x" href="#LCKGO">LCKGO</a>                                       ; even better, change to BIT $abs ($00A9)
                     008 ;
