Fix macro background color

--- a/dos33.html
+++ b/dos33.html
@@ -105,7 +105,7 @@ a.link { /* we link TO somthing -- source */
     color: #08F; /* Baby Blue */
 }
 .macro { /* macro line bg */
-    background-color:#FDD; /* was grey #EEE */
+    background-color:#F4F4F4; /* was grey #EEE */
 }
 .magic { /* hard-coded magic number hack */
     color           :#FFF; /* white on */
